<resources>
    <string name="awonar_facebook_app_id">174232477996286</string>
    <string name="awonar_fb_login_protocol_scheme">fb174232477996286</string>
    <string name="awonar_google_server_client_id" translatable="false">365782781588-djb7tev58j6j3og3te6tk2jnuc04cmsv.apps.googleusercontent.com</string>
    <string name="app_name">Awonar</string>
    <string name="awonar_text_username">Username</string>
    <string name="awonar_text_email">Email</string>
    <string name="awonar_text_password">Password</string>
    <string name="awonar_text_confirm_password">Confirm Passwrod</string>
    <string name="awonar_text_partner_code">Code Partner</string>
    <string name="awonar_text_create_your_account">Create your account</string>
    <string name="awonar_text_sign_in">Sign In</string>
    <string name="awonar_text_or">OR</string>
    <string name="awonar_text_facebook">Facebook</string>
    <string name="awonar_text_google">Google</string>
    <string name="awonar_hint_no_account_signup">Don\'t have an account yet? Sign up!</string>
    <string name="awonar_span_no_account_signup">Sign up!</string>
    <string name="awonar_error_username">Username is invalid!</string>
    <string name="awonar_error_password">Password is invalid! (must be contain only A-Z,a-z,0-9)</string>
    <string name="awonar_text_sent">Sent</string>
    <string name="awonar_signin_to_your_account">Sign in to your account</string>
    <string name="awonar_text_link_account">Link Account</string>

    <string name="awonar_example_name">John Smith</string>
    <string name="awonar_text_about_me">About Me</string>
    <string name="awonar_text_twitter">Twitter</string>
    <string name="awonar_text_linkedin">LinkedIn</string>
    <string name="awonar_text_youtube">Youtube</string>
    <string name="awonar_text_website">Website</string>
    <string name="awonar_text_submit">Submit</string>
    <string name="awonar_text_explain">Explain</string>
    <string name="awonar_text_bio">Bio</string>
    <string name="awonar_text_about_us">About Us</string>
    <string name="awonar_text_social">Social Media</string>
    <string name="awonar_text_skills">Investment Skills</string>
    <string name="awonar_text_verify_bank_account">Verify Bank Account</string>
    <string name="awonar_bank_account_description">It is recommended that you verify at least one bank account. And the bank account name used for verification must match your name only.</string>
    <string name="awonar_hint_account_name">Account Name</string>
    <string name="awonar_hint_your_account_no">Your acccount number</string>
    <string name="awonar_hint_name">Name</string>
    <string name="awonar_hint_lastname">Last Name</string>
    <string name="awonar_text_gender">Gender</string>
    <string name="awonar_format_date" translatable="false">DD/MM/YYYY</string>
    <string name="awonar_hint_country">Country</string>
    <string name="awonar_hint_city">City</string>
    <string name="awonar_hint_postal">Postal Code</string>
    <string name="awonar_text_card_no">ID Card Number</string>
    <string name="awonar_hint_middle_name">Middle Name</string>
    <string name="awonar_hint_address">Address</string>
    <string name="awonar_hint_bank">Bank</string>
    <string name="awonar_hint_account_type">Account Type</string>
    <string name="awonar_text_upload">Upload</string>
    <string name="awonar_text_required">This Field is Required.</string>
    <string name="awonar_text_experience">Experience</string>
    <string name="awonar_dialog_order_text_title_set_rate">Price</string>
    <string name="awonar_dialog_order_text_title_amount">Amount</string>
    <string name="awonar_text_leverage">Leverage</string>
    <string name="awonar_text_amount">Amount</string>
    <string name="awonar_text_units">Units</string>
    <string name="awonar_text_sell">SELL</string>
    <string name="awonar_text_buy">BUY</string>
    <string name="awonar_text_rate">Rate</string>
    <string name="awonar_text_market">Market</string>
    <string name="awonar_title_total_open">Total Open</string>
    <string name="awonar_title_history">History</string>
    <string name="awonar_text_invested">Invested</string>
    <string name="awonar_title_total_net_withdraw_amount">Total Net Withdraw amount</string>
    <string name="awonar_title_withdraw_fee">Withdraw Fee</string>
    <string name="awonar_title_local_amount">Local Amount</string>
    <string name="awonar_text_action">Action</string>
    <string name="awonar_title_take_profit">Take Profit</string>
    <string name="awonar_title_stoploss">Stop Loss</string>
    <string name="awonar_text_close">Close</string>
    <string name="awonar_text_confirm">Confirm</string>
    <string name="awonar_title_total_close">Total Close</string>
    <string name="awonar_text_ratio">Ratio</string>
    <string name="awonar_text_remove_fund">Remove Fund</string>
    <string name="awonar_text_viewmore">View More</string>
    <string name="awonar_text_add_fund">Add Fund</string>
    <string name="awonar_text_update">Update</string>
    <string name="awonar_text_cancel">Cancel</string>
    <string name="awonar_text_back">Back</string>
    <string name="awonar_text_prev">Prev</string>
    <string name="awonar_text_next">Next</string>
    <string name="awonar_text_1d">1D</string>
    <string name="awonar_text_1m">1M</string>
    <string name="awonar_text_3m">3M</string>
    <string name="awonar_text_6m">6M</string>
    <string name="awonar_text_1y">1Y</string>
    <string name="awonar_text_3y">3Y</string>
    <string name="awonar_text_max">Max</string>
    <string name="awonar_text_like">Like</string>
    <string name="awonar_text_comment">Comment</string>
    <string name="awonar_text_share">Share</string>
    <string name="awonar_hint_darf_post">If you go back now, your draft will be discarded</string>
    <string name="awoanr_publish_feed_text_error">Publish Feed is failed. please try again.</string>
    <string name="awoanr_publish_feed_text_success">Publish Feed is Successful.</string>
    <string name="awonar_feed_title_empty">Empty Post</string>
    <string name="awoanr_feed_text_empty_description">The Timeline is empty It seems there are no shares insights.</string>
    <string name="awonar_text_avaliable">Avaliable:</string>
    <string name="awonar_text_allocate">Allocate:</string>
    <string name="awonar_text_equity">Equity:</string>
    <string name="awonar_text_profit">Profit:</string>
</resources>
