<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="email"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/awonar_link_account_toolbar_link_account"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/awonar_ic_back"
            app:title="@string/awonar_signin_to_your_account" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/awonar_link_account_input_email"
            style="@style/Awonar.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/awonar_text_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/awonar_link_account_toolbar_link_account">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@{email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/awonar_link_account_input_password"
            style="@style/Awonar.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/awonar_text_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/awonar_link_account_input_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/awonar_link_account_button_submit"
            style="@style/Awonar.Button.Default.Green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/awonar_size_margin_padding_normal"
            android:text="@string/awonar_text_link_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/awonar_link_account_input_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/awonar_link_account_text_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/awonar_size_margin_padding_large"
            android:text="@string/awonar_hint_no_account_signup"
            app:layout_constraintStart_toStartOf="@+id/awonar_link_account_button_submit"
            app:layout_constraintTop_toBottomOf="@+id/awonar_link_account_button_submit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
