<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.awonar.app.ui.user.UserViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:navigationIcon="@drawable/awonar_ic_back"
                    app:title="@string/awonar_text_about_me" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/awonar_setting_about_title_bio"
                style="@style/Awonar.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/awonar_size_margin_padding_normal"
                android:text="@string/awonar_text_bio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/awonar_setting_about_input_bio"
                style="@style/Awonar.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/awonar_setting_about_title_bio">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/awonar_text_explain"
                    android:lines="3"
                    android:text="@{viewModel.userState.bio}" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/awonar_setting_text_title_about_us"
                style="@style/Awonar.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/awonar_size_margin_padding_normal"
                android:text="@string/awonar_text_about_us"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/awonar_setting_about_input_bio" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/awonar_setting_about_input_about"
                style="@style/Awonar.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/awonar_setting_text_title_about_us">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/awonar_text_explain"
                    android:lines="3"
                    android:text="@{viewModel.userState.about}" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/awonar_setting_text_title_skill"
                style="@style/Awonar.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/awonar_size_margin_padding_normal"
                android:text="@string/awonar_text_skills"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/awonar_setting_about_input_about" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/awonar_setting_about_input_skill"
                style="@style/Awonar.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/awonar_setting_text_title_skill">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/awonar_text_explain"
                    android:lines="3"
                    android:text="@{viewModel.userState.skill}" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/awonar_setting_text_title_social"
                style="@style/Awonar.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/awonar_size_margin_padding_normal"
                android:text="@string/awonar_text_social"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/awonar_setting_about_input_skill" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/awonar_setting_about_input_facebook"
                style="@style/Awonar.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/awonar_setting_text_title_social">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/awonar_text_facebook"
                    android:lines="1"
                    android:text="@{viewModel.userState.facebookLink}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/awonar_setting_about_input_twitter"
                style="@style/Awonar.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/awonar_setting_about_input_facebook">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/awonar_text_twitter"
                    android:lines="1"
                    android:text="@{viewModel.userState.twitterLink}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/awonar_setting_about_input_linkedin"
                style="@style/Awonar.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/awonar_setting_about_input_twitter">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/awonar_text_linkedin"
                    android:lines="1"
                    android:text="@{viewModel.userState.linkedInLink}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/awonar_setting_about_input_youtube"
                style="@style/Awonar.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/awonar_setting_about_input_linkedin">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/awonar_text_youtube"
                    android:lines="1"
                    android:text="@{viewModel.userState.youtubeLink}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/awonar_setting_about_input_website"
                style="@style/Awonar.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/awonar_setting_about_input_youtube">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/awonar_text_website"
                    android:lines="1"
                    android:text="@{viewModel.userState.websiteLink}" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/awonar_setting_about_button_submit"
                style="@style/Awonar.Button.Default.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/awonar_size_margin_padding_normal"
                android:text="@string/awonar_text_submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/awonar_setting_about_input_website" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>

