<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/awonar_size_margin_padding_normal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/awonar_signin_text_title"
            style="@style/Awonar.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign in to your account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/awonar_signin_input_email"
            style="@style/Awonar.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/awonar_text_email"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/awonar_signin_text_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/awonar_signin_input_password"
            style="@style/Awonar.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/awonar_text_password"
            android:singleLine="true"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/awonar_signin_input_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/awonar_signin_button_signin"
            style="@style/Awonar.Button.Default.Green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/awonar_size_margin_padding_normal"
            android:text="@string/awonar_text_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/awonar_signin_input_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>